# eoi_analyzer

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: README.md  architecture.md  product-brief.md  prompts-and-team-context.md  testing-and-ci.md  usage.md  viss-process-mapping.md
eoi_analyzer/: __init__.py  agents.py  analyzer.py  cli.py  config.py  exceptions.py  knowledge.py  profile.py  prompting.py  results.py  utils.py
eoi_analyzer/prompts/: document_intake_system.md  document_intake_user.md  engagement_snapshot_system.md  engagement_snapshot_user.md  eoi_assessment_system.md  eoi_assessment_user.md  letter_of_intent_system.md  letter_of_intent_user.md  project_plan_system.md  project_plan_user.md  recommendation_system.md  recommendation_user.md  scientific_outcome_system.md  scientific_outcome_user.md
static/: app.js  styles.css
templates/: index.html  results.html
tests/: test_agents.py  test_analyzer.py  test_cli.py  test_profile.py  test_prompting.py  test_utils.py
