[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eoi-analyzer"
version = "0.1.0"
description = "Generate software engineering recommendations, project plans, and LoI drafts from EoI documents"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "Flask>=2.2.2",
    "litellm>=1.40.0",
    "pdfplumber>=0.9.0",
    "Markdown>=3.4.1",
    "python-dotenv>=1.0.0",
    "python-docx>=1.1.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[project.scripts]
eoi-analyzer = "eoi_analyzer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["eoi_analyzer"]
